--- a/lesson 2/cms/package.json
+++ b/lesson 2/cms/package.json
@@ -21,9 +21,16 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "jquery": "^3.2.1",
+    "mongoose": "^4.13.6",
+    "mongoose-unique-validator": "^1.0.6",
+    "morgan": "^1.9.0",
     "ng2-dnd": "^4.2.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
